# i2r-rmf-fleet-adapter

./: .test.py.swp  CMakeLists.txt  README.md  package.xml
include/: client.hpp
include/i2r_driver/: feedback_parser.hpp  i2r_driver.hpp  mission_gen.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/axolotl/lib/axolotl/: barkin
install/axolotl/share/axolotl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: axolotl.launch.xml  axolotl_param_launch.py  common.launch.xml  fleet_adapter.launch.xml  i2r_demo.launch.xml  i2r_sim.launch.xml  office_testing.launch.xml  real_i2r_testing.launch.xml  testing_deliveryrobot_adapter.launch.xml
launch/include/: chart.rviz  magni.rviz  magni_adapter.launch.xml  magni_free_fleet_server.launch.xml
launch/include/chart/: .dashboard_config.json.swp  dashboard_config.json
log/: latest_build
map/: 0.yaml
resources/: feedback_from_i2rbot2.txt  i2r_m_jh.txt  nested_mission_data.json  rmf.repos
resources/sample_text_generation_and_feedback/: feedback_from_i2rbot.txt  generated_mission.txt  i2r_point_jh.txt  json_dummy 2.json  json_dummy.json
src/: client.cpp  client.hpp  i2r_driver.cpp  i2r_driver.hpp  main.cpp  server.cpp
src/i2r_driver/: feedback_parser.cpp  i2r_driver.cpp  json_txt_gen.cpp  mission_gen.cpp
